force-app/main/default/objects/Appointment_of_Examiner__c/Appointment_of_Examiner__c.object-meta.xml
<CustomObject>
    <label>Appointment of Examiner</label>
    <nameField>
        <displayFormat>AOE-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment of Examiners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>