force-app/main/default/objects/Appointment_of_Examiner__c/fields/GRE_Examinations_Procedure_URL__c.field-meta.xml
<CustomField>
    <fullName>GRE_Examinations_Procedure_URL__c</fullName>
    <formula>&quot;https://policies.latrobe.edu.au/document/view.php?id=120&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRE Procedure - Appointment of Examiners</label>
    <type>Text</type>
</CustomField>