force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Academic_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Academic_Profile_Link__c</fullName>
    <description>https://eawebdev.atlassian.net/browse/T2-987</description>
    <inlineHelpText>A link to the examiner’s bio or academic profile.</inlineHelpText>
    <label>1st Examiner Academic Profile Link</label>
    <type>Url</type>
</CustomField>