force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the proposed examiner already has a contact record in PRIME, you can select their name here.</inlineHelpText>
    <label>1st Examiner Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment of Examiners</relationshipLabel>
    <relationshipName>Appointment_of_Examiners_1st</relationshipName>
    <type>Lookup</type>
</CustomField>