force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Highest_qualification__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Highest_qualification__c</fullName>
    <inlineHelpText>All examiners must normally hold an equivalent degree, or possess equivalent professional experience, to the degree they are examining and be internationally recognised experts in the research area of the thesis.</inlineHelpText>
    <label>1st Examiner Highest qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>