force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Name__c</fullName>
    <inlineHelpText>If you can&apos;t find an existing contact record for the examiner, please enter their name and contact details.</inlineHelpText>
    <label>1st Examiner Name (including title)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>