force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Organisation_Name__c</fullName>
    <description>https://eawebdev.atlassian.net/browse/T2-987</description>
    <inlineHelpText>If you can’t find an existing contact record for the examiner, please enter the organisation they are associated to.</inlineHelpText>
    <label>1st Examiner Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>