force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_Special_requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Special_requirements__c</fullName>
    <label>1st Examiner - Any special requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>