force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_1st_Examiner_to_examine_thesis__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_to_examine_thesis__c</fullName>
    <inlineHelpText>You must contact the examiner and obtain their agreement to examine the thesis before submitting this form</inlineHelpText>
    <label>Have they agreed to examine the thesis?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>