force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_2nd_Examiner_All_criteria_met__c.field-meta.xml
<CustomField>
    <fullName>I_RS_2nd_Examiner_All_criteria_met__c</fullName>
    <inlineHelpText>The required qualifications for examiners are given in Part C of the Graduate Research Examinations Procedure</inlineHelpText>
    <label>Do they meet all qualification criteria?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>