force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_2nd_Examiner_Criteria_Justification__c.field-meta.xml
<CustomField>
    <fullName>I_RS_2nd_Examiner_Criteria_Justification__c</fullName>
    <inlineHelpText>If the examiner does not meet all the examination criteria, please provide a case for their nomination for review and approval by the Chair of the Board of Graduate Research.</inlineHelpText>
    <label>If no, please provide justification</label>
    <type>TextArea</type>
</CustomField>