force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_2nd_Examiner_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RS_2nd_Examiner_Name_Formula__c</fullName>
    <formula>IF (!ISBLANK( I_RS_2nd_Examiner_Contact_Record__c ),  I_RS_2nd_Examiner_Contact_Record__r.I_RS_Full_Name__c,  I_RS_2nd_Examiner_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd Examiner</label>
    <type>Text</type>
</CustomField>