force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_2nd_Examiner_Requirements_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_2nd_Examiner_Requirements_Desc__c</fullName>
    <inlineHelpText>Use this to notify us of any special requirements the examiner has, such as if they require a hard copy of the thesis</inlineHelpText>
    <label>List any special requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>