force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_3rd_Examiner_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>I_RS_3rd_Examiner_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the proposed examiner already has a contact record in PRIME, you can select their name here.</inlineHelpText>
    <label>3rd Examiner Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment of Examiners (Preferred Reserve Examiner)</relationshipLabel>
    <relationshipName>Appointment_of_Examiners_3rd</relationshipName>
    <type>Lookup</type>
</CustomField>