force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_3rd_Examiner_Nom_Instructions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_3rd_Examiner_Nom_Instructions__c</fullName>
    <formula>&quot;While we ask you to list which examiner you would prefer to be the reserve, you should not communicate who you are nominating as the reserve to any of the nominees. The final decision on examiner order rests with the PVC and the GRS will inform the reserve examiner accordingly.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Examiner Nomination Instructions</label>
    <type>Text</type>
</CustomField>