force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_3rd_Examiner_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_RS_3rd_Examiner_Phone__c</fullName>
    <inlineHelpText>If you can&apos;t find an existing contact record for the examiner, please enter their name and contact details.</inlineHelpText>
    <label>3rd Examiner Phone</label>
    <type>Phone</type>
</CustomField>