force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Anticipated_submission_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Anticipated_submission_date__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Anticipated_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date candidate indicated on their Notice of Intention to Submit that they expect to submit their thesis.</inlineHelpText>
    <label>Anticipated submission date</label>
    <type>Date</type>
</CustomField>