force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Approval_Instructions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Instructions__c</fullName>
    <formula>&quot;Please click on the Form ID to review the examiner details before endorsing this form.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Instructions</label>
    <type>Text</type>
</CustomField>