force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_AS_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_AS_User__c</fullName>
    <description>Refers to GRE&apos;s Alternate Supervisor Contact&apos;s Related User Id</description>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Alternate_Supervisor__r.I_RS_Related_User__c</formula>
    <label>AS User</label>
    <type>Text</type>
</CustomField>