force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Email__c</fullName>
    <description>Email address to send to for comms for Candidate</description>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>