force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_conflict_of_interest_just_2nd__c.field-meta.xml
<CustomField>
    <fullName>I_RS_conflict_of_interest_just_2nd__c</fullName>
    <inlineHelpText>If nominating an examiner with a potential or perceived COI, e.g. a co-author, please justify your selection</inlineHelpText>
    <label>If yes, please provide justification</label>
    <type>TextArea</type>
</CustomField>