force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Examiner_Nomination_Guidance__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Nomination_Guidance__c</fullName>
    <formula>&quot;Three examiners must be nominated for every examination (two examiners and a reserve). If the proposed examiner already has a contact record in PRIME, select their name in the left-hand box below. If you can’t find an existing contact record, please enter the examiner’s name and contact details in the column on the right.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Examiner Nomination Guidance</label>
    <type>Text</type>
</CustomField>