force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Field_of_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Field_of_Research_ShortText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Government classification code describing the candidate&apos;s research field. Recorded in SIS and will appear on the transcript.</inlineHelpText>
    <label>Field of Research</label>
    <type>Text</type>
</CustomField>