force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Graduate_Research_Examination__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the candidate’s examination record</inlineHelpText>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Appointment of Examiners</relationshipLabel>
    <relationshipName>Appointment_of_Examiners</relationshipName>
    <type>Lookup</type>
</CustomField>