force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Maximum_completion_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_completion_date__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Maximum_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date corresponding to candidate&apos;s maximum period of enrolment, usually 2 years for Masters and 4 years for doctoral degrees, as per the Graduate Research Candidature Policy.</inlineHelpText>
    <label>Maximum completion date</label>
    <type>Date</type>
</CustomField>