force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_New_Appointment_of_Examiner__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Appointment_of_Examiner__c</fullName>
    <defaultValue>&quot;A new Appointment of Examiner form will be created. You will be able to find it under the &apos;Appointment of Examiners&apos; section. Click Save to confirm.&quot;</defaultValue>
    <label>New Appointment of Examiner</label>
    <type>TextArea</type>
</CustomField>