force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Portal_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Portal_Record_URL__c</fullName>
    <formula>/*Base URL*/
$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &apos;/detail/&apos;
+
/*Record Id*/
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Record URL</label>
    <type>Text</type>
</CustomField>