force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Potential_conflicts_of_interest_1st__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Potential_conflicts_of_interest_1st__c</fullName>
    <inlineHelpText>For details of what constitutes a potential or perceived COI, see Part D of the Graduate Research Examinations Procedure</inlineHelpText>
    <label>Any conflicts of interest? (Pick Yes/No)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>