force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_SDGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Normally the Director of Graduate Research for the candidate’s school, unless they have a conflict, in which case will usually be the Head of School.</inlineHelpText>
    <label>SDGR Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointment_of_Examiners_SDGR_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>