force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_SDGR_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver_Name__c</fullName>
    <formula>I_RS_SDGR_Approver__r.FirstName + &quot; &quot; + I_RS_SDGR_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDGR Approver Name</label>
    <type>Text</type>
</CustomField>