force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_SDGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_User__c</fullName>
    <description>Refers to GRE&apos;s SDGR Contact&apos;s Related User Id</description>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Substitute_DirectorGraduateResearch__r.I_RS_Related_User__c</formula>
    <label>SDGR User</label>
    <type>Text</type>
</CustomField>